--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
     "tangent_at_five_trace = tangent_line(three_x_squared_minus_eleven, 5, line_length = 4)\n",
     "three_x_squared_minus_eleven_trace = function_values_trace(three_x_squared_minus_eleven, list(range(-10, 10)))\n",
     "\n",
-    "tangent_at_five_trace\n",
+    "#tangent_at_five_trace\n",
     "three_x_squared_minus_eleven_trace\n",
     "\n",
     "#plot([three_x_squared_minus_eleven_trace, tangent_at_five_trace])\n"
