Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,7 @@
     "three_x_squared_minus_eleven_trace = function_values_trace(three_x_squared_minus_eleven, list(range(-10, 10)))\n",
     "\n",
     "#tangent_at_five_trace\n",
-    "three_x_squared_minus_eleven_trace\n",
+    "three_x_squared_minus_eleven_trace['mode'] = 'lines'\n",
     "\n",
     "#plot([three_x_squared_minus_eleven_trace, tangent_at_five_trace])\n"
    ]
