Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -430,46 +430,85 @@
     },
     {
      "data": {
-      "text/plain": [
-       "{'x': [1, 5, 9], 'y': [-56, 64, 184]}"
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "8d80d426-3b8f-11e9-82fd-1b6afdb7f8b2",
+         "x": [
+          -10,
+          -9,
+          -8,
+          -7,
+          -6,
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          289,
+          232,
+          181,
+          136,
+          97,
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37,
+          64,
+          97,
+          136,
+          181,
+          232
+         ]
+        },
+        {
+         "type": "scatter",
+         "uid": "8d80d73c-3b8f-11e9-82fd-1b6afdb7f8b2",
+         "x": [
+          1,
+          5,
+          9
+         ],
+         "y": [
+          -56,
+          64,
+          184
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"cd3beb0f-0979-42f8-9269-277651f66dc0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd3beb0f-0979-42f8-9269-277651f66dc0\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"8dad9d26-3b8f-11e9-82fd-1b6afdb7f8b2\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"8dad9f88-3b8f-11e9-82fd-1b6afdb7f8b2\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"cd3beb0f-0979-42f8-9269-277651f66dc0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd3beb0f-0979-42f8-9269-277651f66dc0\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"8dad9d26-3b8f-11e9-82fd-1b6afdb7f8b2\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"8dad9f88-3b8f-11e9-82fd-1b6afdb7f8b2\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'x': [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       " 'y': [289,\n",
-       "  232,\n",
-       "  181,\n",
-       "  136,\n",
-       "  97,\n",
-       "  64,\n",
-       "  37,\n",
-       "  16,\n",
-       "  1,\n",
-       "  -8,\n",
-       "  -11,\n",
-       "  -8,\n",
-       "  1,\n",
-       "  16,\n",
-       "  37,\n",
-       "  64,\n",
-       "  97,\n",
-       "  136,\n",
-       "  181,\n",
-       "  232],\n",
-       " 'mode': 'line',\n",
-       " 'name': 'data',\n",
-       " 'text': []}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -487,7 +526,7 @@
     "#tangent_at_five_trace\n",
     "three_x_squared_minus_eleven_trace['mode'] = 'lines'\n",
     "\n",
-    "#plot([three_x_squared_minus_eleven_trace, tangent_at_five_trace])\n"
+    "plot([three_x_squared_minus_eleven_trace, tangent_at_five_trace])\n"
    ]
   },
   {
