Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -717,8 +717,9 @@
    "source": [
     "\n",
     "side_by_side_three_x_squared_minus_eleven = side_by_side_derivative_rules(three_x_squared_minus_eleven, list(range(-5, 5)))\n",
-    "if side_by_side_three_x_squared_minus_eleven:\n",
-    "    plot_figure(side_by_side_three_x_squared_minus_eleven)"
+    "\n",
+    "#if side_by_side_three_x_squared_minus_eleven:\n",
+    "#    plot_figure(side_by_side_three_x_squared_minus_eleven)"
    ]
   },
   {
