Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -720,8 +720,8 @@
     "\n",
     "side_by_side_three_x_squared_minus_eleven\n",
     "\n",
-    "#if side_by_side_three_x_squared_minus_eleven:\n",
-    "#    plot_figure(side_by_side_three_x_squared_minus_eleven)"
+    "if side_by_side_three_x_squared_minus_eleven:\n",
+    "    plot_figure(side_by_side_three_x_squared_minus_eleven)"
    ]
   },
   {
