--- a/index.ipynb
+++ b/index.ipynb
@@ -663,7 +663,9 @@
     "\n",
     "def side_by_side_derivative_rules(list_of_terms, x_values):\n",
     "    function_trace = function_values_trace(list_of_terms, x_values)\n",
+    "    function_trace[]\n",
     "    derivative_trace = derivative_function_trace(list_of_terms, x_values)\n",
+    "    \n",
     "    if derivative_trace and function_trace:\n",
     "        return make_subplots([function_trace], [derivative_trace])\n"
    ]
