Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
     "    function_trace = function_values_trace(list_of_terms, x_values)\n",
     "    function_trace['mode'] = 'lines'\n",
     "    derivative_trace = derivative_function_trace(list_of_terms, x_values)\n",
-    "    \n",
+    "    derivative_trace['mode'] = 'lines'\n",
     "    if derivative_trace and function_trace:\n",
     "        return make_subplots([function_trace], [derivative_trace])\n"
    ]
